adding filters to a list query
